<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <bundle.symbolicName>intactApp</bundle.symbolicName>
        <bundle.namespace>uk.ac.ebi.intact.intactApp.internal</bundle.namespace>
        <cytoscape.api.version>3.8.0</cytoscape.api.version>
        <osgi.api.version>4.2.0</osgi.api.version>
    </properties>

    <groupId>uk.ac.ebi.intact</groupId>
    <artifactId>intactApp</artifactId>
    <packaging>bundle</packaging>
    <name>${bundle.symbolicName}</name>

    <version>1.0.0</version>

    <scm>
        <connection>scm:git:https://github.com/EliotRagueneau/IntactApp.git</connection>
        <developerConnection>scm:git:https://github.com/EliotRagueneau/IntactApp.git</developerConnection>
        <url>https://github.com/EliotRagueneau/IntactApp</url>
        <tag>HEAD</tag>
    </scm>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
                <version>1.0-m5.1</version>
                <configuration>
                    <flowInitContext>
                        <masterBranchName>master</masterBranchName>
                        <developBranchName>develop</developBranchName>
                        <featureBranchPrefix>feature-</featureBranchPrefix>
                        <releaseBranchPrefix>release-</releaseBranchPrefix>
                        <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
                        <versionTagPrefix>${project.artifactId}-</versionTagPrefix>
                    </flowInitContext>
                    <username>${git.user}</username>
                    <password>${git.password}</password>
                    <!-- see goals wiki page for configuration options -->
                    <allowUntracked>true</allowUntracked>
                    <noDeploy>true</noDeploy>
                    <pullMaster>true</pullMaster>
                    <pullDevelop>true</pullDevelop>
                    <pushReleases>true</pushReleases>
                    <pushHotfixes>true</pushHotfixes>
                    <pushFeatures>true</pushFeatures>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>4.2.1</version>
                <extensions>true</extensions>
                <configuration>
                    <unpackBundle>false</unpackBundle>
                    <instructions>
                        <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                        <Bundle-Version>${project.version}</Bundle-Version>
                        <Export-Package>
                            !${bundle.namespace}.*
                        </Export-Package>
                        <Private-Package>${bundle.namespace}.*,org.jcolorbrewer.*</Private-Package>
                        <Bundle-Activator>${bundle.namespace}.CyActivator</Bundle-Activator>
                        <Import-Package>*;resolution:=optional</Import-Package>
                        <Embed-Dependency>*;scope=!provided|!test</Embed-Dependency>
                        <Embed-Transitive>true</Embed-Transitive>
                        <Cytoscape-App-Dependencies>
                            enhancedGraphics;1.2.0
                        </Cytoscape-App-Dependencies>
                    </instructions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- Links to the Cytoscape Maven repositories. -->
    <repositories>
        <repository>
            <id>cytoscape_snapshots</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
            <name>Cytoscape Snapshots</name>
            <url>http://code.cytoscape.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>cytoscape_releases</id>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
            <name>Cytoscape Releases</name>
            <url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
        </repository>
        <repository>
            <id>apache-repo-releases</id>
            <url>https://repository.apache.org/content/repositories/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>apache_maven2</id>
            <url>http://repo.maven.apache.org/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>model-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>command-executor-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>swing-application-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>group-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>application-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>core-task-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>viewmodel-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>layout-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>presentation-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>work-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>service-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>swing-util-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>webservice-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cytoscape</groupId>
            <artifactId>webservice-swing-api</artifactId>
            <version>${cytoscape.api.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.ops4j.pax.logging</groupId>
            <artifactId>pax-logging-api</artifactId>
            <version>1.5.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.core</artifactId>
            <version>${osgi.api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.10</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.10.2</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.10.2</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20190722</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>

    </dependencies>

</project>
